--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
     "version": "1.0.0",
     "browser_action": {
       "default_popup": "popup.html"
-      
     },
-    "permissions": ["activeTab"]
+    "permissions": ["activeTab", "storage"],
+    "action": {
+        "default_popup": "popup.html"
+      }
   }
