--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     },
     "permissions": ["activeTab", "storage"],
     "action": {
-        "default_popup": "popup.html",
+        "default_popup": "index.html",
         "default_icon":{
             "16": "/image/16px - Extension Logo.png",
             "48": "/image/48px - Extension Logo.png",
